--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "yup": "^1.2.0"
   },
